--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,1 +1,16 @@
-<app-load-staff></app-load-staff>
+<div class="header">
+
+  <a routerLink='/load' class="home">
+    <div>
+      Home
+    </div>
+  </a>
+  <a routerLink='/register' class="register">
+    <div>
+      Register
+    </div>
+  </a>
+
+</div>
+
+<router-outlet></router-outlet>
