--- a/src/app/register/register.component.css
+++ b/src/app/register/register.component.css
@@ -38,19 +38,19 @@ input[type=text], input[type=password] ,input[type=datetime], input[type=date]{
     opacity: 0.7;
 
   }
-  .registerEdit
+  .delete
   {
     background-color: #000000;
     color: white;
-    padding: 16px 20px;
     margin: auto;
     border: none;
     cursor: pointer;
-    width: 20%;
+    width: 10%;
     opacity: 0.7;
+    padding:5px;
 
   }
-  .registerEdit:hover
+  .delete:hover
   {
       opacity: 1;
   }
