home ui minor change

--- a/src/app/load-staff/load-staff.component.html
+++ b/src/app/load-staff/load-staff.component.html
@@ -10,7 +10,7 @@
       <option value="support">Supporting Staff</option>
     </select>
 
-    <button type="submit">Load</button>
+    <button type="submit" class="load">Load</button>
   </form>
 
 </div>
