--- a/src/app/load-staff/load-staff.component.css
+++ b/src/app/load-staff/load-staff.component.css
@@ -18,9 +18,20 @@ td{
 
 }
 tr:hover
-{background-color: #f5f5f5;}
+{background-color: #f5f5f5;
+cursor: pointer;}
 
-.staff-class
-{
+.load
+  {
+    background-color: #000000;
+    color: white;
+    margin: auto;
+    border: none;
+    cursor: pointer;
+    width: 50px;
+    opacity: 0.7;
+    padding:2px;
+    margin: 0 0 0 5px;
+    text-align: center;
 
-}
+  }
