--- a/src/app/register/register.component.css
+++ b/src/app/register/register.component.css
@@ -36,6 +36,10 @@ input[type=text], input[type=password] ,input[type=datetime], input[type=date]{
     cursor: pointer;
     width: 20%;
     opacity: 0.7;
+    border-radius: 2px;
+
+    position: absolute;
+    left: 40%;
 
   }
   .delete
@@ -48,6 +52,7 @@ input[type=text], input[type=password] ,input[type=datetime], input[type=date]{
     width: 10%;
     opacity: 0.7;
     padding:5px;
+    border-radius: 2px;
 
   }
   .delete:hover
@@ -61,4 +66,16 @@ input[type=text], input[type=password] ,input[type=datetime], input[type=date]{
     width: 100%;
     position: absolute;
     left: 40%;
+  }
+
+  .register-form
+  {
+    width:50%;
+    height:720px;
+    margin:auto;
+    background: white;
+    box-shadow: 0 0 15px rgba(0,0,0,0.2);
+    padding:20px;
+    border-radius: 5px;
+
   }
