--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -20,7 +20,8 @@
     <input type="text" id="IEmpId" [(ngModel)]="EmpId" [ngModelOptions]="{standalone :true}"
       [disabled]="!selectEditable" /><br><br>
     <label>Name :</label><br>
-    <input type="text" id="IName" [(ngModel)]="Name" [ngModelOptions]="{standalone :true}" /><br><br>
+    <input type="text" id="IName" [(ngModel)]="Name" [ngModelOptions]="{standalone :true}" />
+    <br><br>
     <label>Email :</label><br>
     <input type="text" id="IEmail" [(ngModel)]="Email" [ngModelOptions]="{standalone :true}" /><br><br>
     <label>Phone :</label><br>
